Closed Bug 1214759 Opened 9 years ago Closed 9 years ago

layout/generic/test/test_selection_underline.html fails under Skia content from buggy dashed line optimization

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox44 --- fixed

People

(Reporter: lsalzman, Assigned: lsalzman)

Details

Attachments

(1 file)

The test layout/generic/test/test_selection_underline.html is currently failing when using Skia as the content backend. This is due to a dashed line optimization in Skia that is applying to the reference but not the test case itself, with slightly different rendering results.
SkDashPathEffects::asPoints fails to apply in some situations. This is because a tangent vector was being normalized and compared exactly to 1. Since normalizing a vector may result in values close-to-but-not-exactly 1, this fails.

Skia fixed this upstream by using an inexact comparison, so this is just a straight backport of their fix and shouldn't pose a problem with updates.

It makes the effect optimization apply to the test-case so it matches the ref and thus passes.
Attachment #8673796 - Flags: review?(jmuizelaar)
Attachment #8673796 - Flags: review?(jmuizelaar) → review+
https://hg.mozilla.org/mozilla-central/rev/92a790ce42a3
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: