Bug 1214759 - backport SkDashPathEffect::asPoints fix from upstream Skia. r=jmuizelaar